# de-zoomcamp

./: .gitignore  pyproject.toml
 week-04/: dbt_project.yml
 week-04/macros/: get_payment_description.sql
 week-04/models/core/: fact_trips.sql
 week-04/models/staging/: green_data.sql  schema.yaml  trip_data.sql  yellow_data.sql
ny_taxi_postgres_data/base/13445/: pg_internal.init
ny_taxi_postgres_data/global/: pg_control  pg_internal.init
ny_taxi_postgres_data/pg_stat/: global.stat
oop_refresh/: encapsulation.py  inheritance.py  oop_basic.py
proto-project/: proto_main.py  reddit_scraper.py
tests/: test_de_zoomcamp.py
week-01/docker-sql/: Dockerfile  docker-compose.yaml  download  ingest_csv.py  ingest_data.py  ingest_taxi_trips.sh  ingest_taxi_zone.sh  inspect_data.ipynb  run_ingest_data.bash  run_ingest_data.sh  upload_to_postgres.py
week-01/docker-sql/homework/: sql_commands.sql
week-01/terraform/: hw.tfplan  m2.tfplan  m3.tfplan  main.tf  new.tfplan  terraform.tfstate  terraform.tfstate.backup  variables.tf
week-01/terraform/.terraform/: terraform 2.tfstate
week-02/airflow/: docker-compose.yaml
week-02/airflow/dags/: data_ingestion_local.py  ingest_to_pg.py
week-02/airflow/dags_gpc/: dag_for_hire_templates.py  dag_hw.py  dag_hw_for_hire.py  dag_hw_templates.py  dag_hw_zones.py  data_gpc.py
week-02/prefect/: Dockerfile  Dockerfile_exp
week-02/prefect/flows/: parameterized_flow.py
week-03/: from_gcs_to_bg.py  homework_load_fhv.py  load_into_bq.py  queries_for_bq.sql
week-04/: dbt_project.yml
(+18 files in other folders)
