[tool.poetry]
name = "de-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Arturomtz8 <arturo.mtz8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^8.0.0"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.38"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
